# bevy_foliage_paint

./: Cargo.toml  readme.md  todo.md
assets/foliage/: foliage_config.ron  foliage_manifest.ron
examples/: basic.rs  chunks.rs
src/: density_map.rs  edit.rs  foliage.rs  foliage_chunk.rs  foliage_config.rs  lib.rs  tool_preview.rs  y_offset_map.rs
