[package]
name = "bevy_foliage_paint"
description = "A foliage painting system using warbler grass"
 
version = "0.13.8"
 
 
edition = "2021"
authors = [ "ethereumdegen" ]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/ethereumdegen/bevy_regions"
exclude = [ "/assets/", "/examples/" ]
keywords = [ "region" , "bevy" ]


[dependencies]
anyhow = "1.0.75"
bevy = "0.13.1"
bevy_mod_sysfail = "6.0.0"
futures-lite = "1.13.0"
image = "0.24.7" 
png = "0.17.11"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
 
#warbler_grass = "0.6.0"



warbler_grass = { git = "https://github.com/EmiOnGit/warbler_grass", rev = "215874d058df7df030537e37acfbdf197b563745" }

thiserror = "1.0.48"
 
  
serde_json = "1.0.113"
 
rand = "0.8.5"

bevy-inspector-egui = "0.24.0"
 
[[example]]
name = "basic"
path = "examples/basic.rs"


[[example]]
name = "chunks"
path = "examples/chunks.rs"
